--- a/profesionales/templates/profesionales/consulta_updateview.html
+++ b/profesionales/templates/profesionales/consulta_updateview.html
@@ -7,11 +7,72 @@
 
 {% block content %}
     <h2>Actualizar datos de la consulta</h2>
-        {% crispy form %}
+    
+    <form method="post" novalidate>
+        {% csrf_token %}
+        {{ form|crispy}}
+    
+        
+    
+    <div class="accordion" id="accordion">
+      {% for formset in formsets %}
+      {% with formset.prefix|slugify as p %}
+          
+      <div class="card">
+        
+        <div class="card-header" id="heading-{{ p }}">
+          <h2 class="mb-0">
+            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse-{{ p }}" aria-expanded="true" aria-controls="collapse-{{ p }}">
+              {{ formset.prefix }}
+            </button>
+          </h2>
+        </div>
+    
+        <div id="collapse-{{ p }}" class="collapse" aria-labelledby="heading-{{ p }}" data-parent="#accordion">
+          <div class="card-body">
+                {% for form in formset %}
+                    <div class="{{ p }}-form">
+                        {{ form|crispy }}
+                    </div>
+                {% endfor %}
+                {{ formset.management_form }}              
+          </div>
+        </div>
+      </div>
+      {% endwith %}
+      {% endfor %}
+    </div>
+    
+            <button type="submit" class="btn btn-success">Guardar Consulta</button>
+        </form>
+
+
     <div class="line"></div>
 
 {% endblock %}
+
 {% block js_footer %}
-    <script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
+
+    {{ block.super }}
+    <script type="text/javascript" src="{% static 'js/jquery.formset.js' %}" type="text/javascript"> </script>
+
     {{ form.media }}
+
+<script type="text/javascript">
+$( document ).ready(function() {
+{% for formset in formsets %}
+{% with formset.prefix|slugify as p %}
+    $('.{{ p }}-form').formset({
+        prefix: '{{ formset.prefix|slugify }}',
+        addText: 'Agregar otro',         
+        deleteText: 'Eliminar',        
+        deleteCssClass: 'btn btn-sm btn-danger',
+        addCssClass: 'btn btn-sm btn-success'
+    });
+{% endwith %}
+{% endfor %}
+})
+</script>
+
+
 {% endblock js_footer %}
