Cambio de nombre a estado Confirmado

--- a/calendario/templates/calendario.html
+++ b/calendario/templates/calendario.html
@@ -21,7 +21,7 @@
     .turnoAsignado{
       background-color: rgb(71, 115, 212);
     }
-    .turnoConfirmado{
+    .turnoEsperandoEnSala{
       background-color: rgb(21, 102, 21);
     }
     .turnoAtendido{
@@ -79,7 +79,7 @@
           info.el.className = info.el.className + " turnoAsignado";
           break;
         case 2:
-          info.el.className = info.el.className + " turnoConfirmado";
+          info.el.className = info.el.className + " turnoEsperandoEnSala";
           break;
         case 3: 
           info.el.className = info.el.className + " turnoAtendido";
