--- a/profesionales/templates/profesionales/consulta_updateview.html
+++ b/profesionales/templates/profesionales/consulta_updateview.html
@@ -1,78 +1,10 @@
-{% extends "base_admin.html" %}
+{% extends "profesionales/consulta_createview.html" %}
 {% load crispy_forms_tags %}
 {% load static %}
 
 {% block extra_head %}
 {% endblock %}
 
-{% block content %}
-    <h2>Actualizar datos de la consulta</h2>
-    
-    <form method="post" novalidate>
-        {% csrf_token %}
-        {{ form|crispy}}
-    
-        
-    
-    <div class="accordion" id="accordion">
-      {% for formset in formsets %}
-      {% with formset.prefix|slugify as p %}
-          
-      <div class="card">
-        
-        <div class="card-header" id="heading-{{ p }}">
-          <h2 class="mb-0">
-            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse-{{ p }}" aria-expanded="true" aria-controls="collapse-{{ p }}">
-              {{ formset.prefix }}
-            </button>
-          </h2>
-        </div>
-    
-        <div id="collapse-{{ p }}" class="collapse" aria-labelledby="heading-{{ p }}" data-parent="#accordion">
-          <div class="card-body">
-                {% for form in formset %}
-                    <div class="{{ p }}-form">
-                        {{ form|crispy }}
-                    </div>
-                {% endfor %}
-                {{ formset.management_form }}              
-          </div>
-        </div>
-      </div>
-      {% endwith %}
-      {% endfor %}
-    </div>
-    
-            <button type="submit" class="btn btn-success">Guardar Consulta</button>
-        </form>
-
-
-    <div class="line"></div>
-
-{% endblock %}
-
-{% block js_footer %}
-
-    {{ block.super }}
-    <script type="text/javascript" src="{% static 'js/jquery.formset.js' %}" type="text/javascript"> </script>
-
-    {{ form.media }}
-
-<script type="text/javascript">
-$( document ).ready(function() {
-{% for formset in formsets %}
-{% with formset.prefix|slugify as p %}
-    $('.{{ p }}-form').formset({
-        prefix: '{{ formset.prefix|slugify }}',
-        addText: 'Agregar otro',         
-        deleteText: 'Eliminar',        
-        deleteCssClass: 'btn btn-sm btn-danger',
-        addCssClass: 'btn btn-sm btn-success'
-    });
-{% endwith %}
-{% endfor %}
-})
-</script>
-
-
-{% endblock js_footer %}
+{% block action_title %}
+	Actualizar datos de la consulta
+{% endblock action_title %}
