mover consultas a pacientes y sacar de profesionales

--- a/ggg/templates/menu_lat_admin.html
+++ b/ggg/templates/menu_lat_admin.html
@@ -147,7 +147,7 @@ Centro de salud activo
         
         {% if perms.profesionales.add_consulta %}
         <li>
-            <a href="{% url 'profesionales.crear.consulta' %}">Nueva consulta</a>
+            <a href="{% url 'pacientes.crear.consulta' %}">Nueva consulta</a>
         </li>
         {% endif %}
 
