--- a/pacientes/templates/pacientes/consulta_detailview.html
+++ b/pacientes/templates/pacientes/consulta_detailview.html
@@ -61,7 +61,7 @@
                     </div>
                     <div class="modal-footer">
                             <div class="col-lg-12 text-right">
-                                <a class="btn btn-primary" href="{% url 'profesionales.consulta.lista' dni=object.paciente.numero_documento %}" role="button">VOLVER AL LISTADO</a>
+                                <a class="btn btn-primary" href="{% url 'pacientes.consulta.lista' dni=object.paciente.numero_documento %}" role="button">VOLVER AL LISTADO</a>
                             </div>
                     </div>
             </div>
