formulario de evolucion de paciente en progreso

--- a/pacientes/templates/pacientes/consulta_detailview.html
+++ b/pacientes/templates/pacientes/consulta_detailview.html
@@ -22,9 +22,9 @@
                             <p>{{fecha}}</p>
                             <label>ATENDIDO POR DR:</label>
                             <p>{{ object.profesional }}</p>
-                            {% if object.diagnostico %}
+                            {% if object.evolucion %}
                                 <label>DIÁGNOSTICO:</label>
-                                <p>{{object.diagnostico}}</p>
+                                <p>{{object.evolucion}}</p>
                             {% endif %}
                             {% if object.indicaciones %}
                                 <label>INDICACIONES:</label>
