--- a/pacientes/templates/pacientes/evolucion.html
+++ b/pacientes/templates/pacientes/evolucion.html
@@ -36,13 +36,36 @@
       <div class="col-6 col-md-6">
         <div>
           <h3>Consultas previas</h3>
-          {% for cp in consultas_previas.all %}
-          <p>Fecha: {{ cp.created|date:"Y/m/d H:i" }}</p>
-          <p>CIE10: {{ cp.codigo_cie_principal }}</p>
-          <p>Evolucion {{ cp.evolucion }}</p>
-          {% empty %}
-          <p>No se registran consultas previas</p>
-          {% endfor %}
+
+          <div class="accordion" id="accordion">
+              {% for cp in consultas_previas.all %}
+              <div class="card">
+                
+                <div class="card-header" id="heading-{{ cp.id }}">
+                  <h2 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse-{{ cp.id }}" aria-expanded="true" aria-controls="collapse-{{ cp.id }}">
+                        {{ cp.created|date:"Y/m/d H:i" }} {{ cp.codigo_cie_principal|default_if_none:"" }} 
+                    </button>
+                  </h2>
+                </div>
+            
+                <div id="collapse-{{ cp.id }}" class="collapse" aria-labelledby="heading-{{ cp.id }}" data-parent="#accordion">
+                  <div class="card-body">
+                      <p>Evolucion: {{ cp.evolucion }}</p>
+                      <p>Profesional: {{ cp.profesional }}</p>
+                      <p>Especialidad: {{ cp.especialidad }}</p>
+                      <p>Centro de salud: {{ cp.centro_de_salud }}</p>
+                  </div>
+                </div>
+              </div>
+              {% empty %}
+              <p>No se registran consultas previas</p>
+              {% endfor %}
+            </div>
+
+
+
+          
         </div>
         <div class="accordion" id="accordion">
           {% for formset in formsets %}
