se graban ya las medidas anexas de las consultas

--- a/pacientes/templates/pacientes/consulta_listview.html
+++ b/pacientes/templates/pacientes/consulta_listview.html
@@ -26,7 +26,7 @@
                 </button>
                 <button>
                     <li class="nav-link">
-                        <a href="{% url 'pacientes.actualizar.consulta' dni=consulta.paciente.numero_documento pk=consulta.id %}">
+                        <a href="{% url 'pacientes.evolucion' pk=consulta.id %}">
                             Actualizar datos
                         </a>
                     </li>
