--- a/pacientes/templates/pacientes/evolucion.html
+++ b/pacientes/templates/pacientes/evolucion.html
@@ -40,7 +40,7 @@
               <input 
                 type="number" 
                 value="{{ medida.medida_en_consulta.valor|unlocalize }}" 
-                step="10.00" required="" 
+                step="10.00" required="true" 
                 name="medida_{{ medida.medida_en_consulta.id}}">
               
 <small> {{ medida.medida_en_consulta.medida.observaciones_para_el_que_mide }} {{ medida.medida_en_especialidad.observaciones_para_el_que_mide }}</small>
