--- a/profesionales/static/css/tableros.css
+++ b/profesionales/static/css/tableros.css
@@ -225,5 +225,9 @@ a.article, a.article:hover {
 
 /* override select2 */
 .select2-container .select2-selection--single {
-    height: 41px;
+    height: 41px !important;
     }
+
+h4 {
+    margin-top: 15px !important;
+}
