Buscar por PUCO cuando un ciudadano se agenda un turno

--- a/calendario/templates/calendario-agregar.html
+++ b/calendario/templates/calendario-agregar.html
@@ -190,7 +190,9 @@
         <div class="form-group">
           <label for="dni" class="col-form-label">DNI Paciente:</label>
           <input class="form-control" id="dni"></input>
-          <span class="help-block" id="dni-error" style="display: none;">El dni es incorrecto</span>
+          <span class="help-block" id="dni-error" style="display: none;">
+            Tu historia clínica no ha sido inicializada, luego de que recibas la próxima atención esto estará resuelto
+          </span>
         </div>
         <input id="turn_pk" hidden/>
       </div>
